<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.RuleActivity"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/rule_toolbar"
        android:layout_width="match_parent"
        android:background="#F8FAF9"
        android:tooltipText="@string/edit_rule"
        android:layout_height="?attr/actionBarSize"/>

    <ScrollView
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <TextView
                    android:text="@string/desc_rule"
                    android:layout_width="match_parent"
                    android:textSize="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/rule_sourceName"
                    android:layout_height="match_parent"/>
                <EditText
                    android:id="@+id/rule_sourceName"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/rule_sourceUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/rule_sourceUrl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/reqMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/reqMethod"
                    android:maxLines="1"
                    android:text="get"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/postUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/rule_postUrl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/rule_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/rule_data"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/rule_sortUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/rule_sortUrl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/rule_sourceImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/rule_sourceImage"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/rule_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/rule_list"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/rule_href"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/rule_href"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/rule_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/rule_title"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/rule_src"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/rule_src"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rule_imageListIsJson"/>
                <EditText
                    android:id="@+id/rule_imageListIsJson"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rule_imageListIsRe"/>
                <EditText
                    android:id="@+id/rule_imageListIsJsonRe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rule_imageList" />
                <EditText
                    android:id="@+id/rule_imageList"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/rule_ImageListData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/rule_imageListData"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rule_imageUrlReplace"/>
                <EditText
                    android:id="@+id/rule_imageUrlReplace"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/rule_sourceIndexImgLast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/rule_sourceIndexImgLast"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/nextPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/rule_nextPage"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/js"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/js"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:text="@string/jsMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/jsMethod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>


                <TextView
                    android:text="@string/cookie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/rule_cookie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>